--- a/dog_app.ipynb
+++ b/dog_app.ipynb
@@ -299,7 +299,7 @@
    "source": [
     "__Question 2:__ This algorithmic choice necessitates that we communicate to the user that we accept human images only when they provide a clear view of a face (otherwise, we risk having unneccessarily frustrated users!). In your opinion, is this a reasonable expectation to pose on the user? If not, can you think of a way to detect humans in images that does not necessitate an image with a clearly presented face?\n",
     "\n",
-    "__Answer:__\n",
+    "__Answer:__ I think it is a reasonable expectation for the user. We could train a model using sequences of networks where we go from identifying human details such as eyes, ears, nose, mouth, chin, neck and so on, feeding a network which, based on the spatial positions of the identified features they are coherent with the positions of a human skull. It seems that such algorithm could do a better job with a partial view of the face, but it would also need a way greater training set and might not be as quick and accurate.\n",
     "\n",
     "We suggest the face detector from OpenCV as a potential way to detect human images in your algorithm, but you are free to explore other approaches, especially approaches that make use of deep learning :).  Please use the code cell below to design and test your own face detection algorithm.  If you decide to pursue this _optional_ task, report performance on each of the datasets."
    ]
@@ -908,13 +908,7 @@
       "167/167 [==============================] - 43s 260ms/step - loss: 1.3560 - acc: 0.6361 - val_loss: 1.6673 - val_acc: 0.5533\n",
       "\n",
       "Epoch 00039: val_loss improved from 1.68611 to 1.66732, saving model to saved_models/weights.best.from_scratch.hdf5\n",
-      "Epoch 40/150\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 40/150\n",
       "167/167 [==============================] - 43s 259ms/step - loss: 1.3472 - acc: 0.6352 - val_loss: 1.7120 - val_acc: 0.5222\n",
       "\n",
       "Epoch 00040: val_loss did not improve from 1.66732\n",
@@ -1260,13 +1254,7 @@
       "167/167 [==============================] - 43s 259ms/step - loss: 0.6658 - acc: 0.8171 - val_loss: 1.6545 - val_acc: 0.6072\n",
       "\n",
       "Epoch 00124: val_loss did not improve from 1.49434\n",
-      "Epoch 125/150\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 125/150\n",
       "167/167 [==============================] - 43s 258ms/step - loss: 0.6637 - acc: 0.8223 - val_loss: 1.5985 - val_acc: 0.6156\n",
       "\n",
       "Epoch 00125: val_loss did not improve from 1.49434\n",
@@ -1809,6 +1797,9 @@
     "\n",
     "__Answer:__ \n",
     "The Xception network from Francois Chollet is a great starting base for classification problems. I just added few layers with enough parameters and dropouts to reduce overfitting over the available data. It seems that the major holdup is augmentation of the training data.\n",
+    "Also, having a pre-trained network helped greatly in achieving a higher accuracy in a comparable amount of computation time. The dataset provided is not large enough to obtain it.\n",
+    "For example, the original network which I trained, needed almost 1.5 hours to run, with image augmentation, to obtain a result just marginally better than the pretrained VGG16, which trained in a matter of seconds.\n",
+    "The proof of the power of pretrained networks came with the Xception, which trained in a comparable time with my network, but obtained an accuracy above 85%, versus less than 60%. \n",
     "\n"
    ]
   },
